3rd September 2009 - Euan Freeman
  - Added 'systray_sort' option
  
  - Created documentation for developers (see doc folder) about how to modify tintwizard to add new tint2 settings.

3rd September 2009 - Revision 137 - Euan Freeman
  - User can now "disable" the 'taskbar_active_background_id' option
  
  - Renamed changelog.txt to ChangeLog

3rd September 2009 - Revision 136 - Euan Freeman
  - Added support for 'desktop_left' and 'desktop_right' mouse actions

3rd September 2009 - Revision 135 - Euan Freeman
  - Fixed problem when creating a 'New Config', where the colour buttons were defaulting to #000000 rather than the default 'fgColor'
  
  - Grouped all the related 'Task' tabs under a new notebook
  
  - Added support for 'task_icon_hsb', 'task_active_icon_hsb' and 'taskbar_active_background_id'
  
  - Added support for 'maximize_restore' mouse action (see tint2 r156)

30th August 2009 - Revision 130 - Euan Freeman
  - Removed "single_monitor" option from "taskbar_mode"
  
  - Updated options available for "panel_pos" to include "horizontal" / "vertical"
  
  - Changed default clock2 format from "%A %d %B" to "%a %d %b"
  
  - Replaced "task_width" with "task_maximum_size"
  
  - The panel size label gets updated to either "Size (width, height)" or "Size (height, width)" depending on the orientation chosen.
  
  - Added link to http://code.google.com/p/tint2/ in README
  
  - Added the options "clock_lclick_command" and "clock_rclick_command"

28th August 2009 - Revision 127 - Euan Freeman
  - Added the wm_menu option
  
  - Refactored the 'new config' function
  
  - Added some documentation to code
  
  - When applying config to tint2, user has choice to use this as the default

27th August 2009 - Revision 124 - Euan Freeman
  - Fixed problem reading/writing to tintwizard.conf
  
  - Made changes to README file

26th June 2009 - Revision 115 - Euan Freeman
  - Version 0.2 release

24th June 2009 - Revision 114 - Euan Freeman